fixed banner section

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <main>
         <!-- banner section -->
         <section class="banner-section">
-            <div class="container">
-                <h1 class="banner-section">Эффективные решения <br /> для вашего бизнеса</h1>
+          
+                <h1 class="banner-title">Эффективные решения <br /> для вашего бизнеса</h1>
                 <div class="div-buttom"><button class="buttom" type="button">Заказать услугу </button></div>
 
-            </div>
+           
         </section>
 
         <!-- features -->
